--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -4,6 +4,15 @@
     <meta charset="utf-8" />
     <title>Admin</title>
     <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
+    <script>
+      window.CMS_MANUAL_INIT = true;
+    </script>
   </head>
-  <body></body>
+  <body>
+    <script>
+      CMS.init({
+        config: '/admin/config.yaml'
+      });
+    </script>
+  </body>
 </html>
