--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -11,7 +11,7 @@
   <body>
     <script>
       CMS.init({
-        config: '/admin/config.yaml'
+        config: '/admin/config.json'
       });
     </script>
   </body>
